# core

./: .dockerignore  .editorconfig  .env.example  .env.telegram.example  .gemini  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  BOOTSTRAP_REPORT.md  BRAND_USAGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  GITHUB_MANUAL_OR_CLI_STEPS.md  GOVERNANCE.md  HARDCODED_SKIPPED.md  LICENSE  MANIFEST.in  MIGRATION_REPORT.md  NEXT_ACTIONS.md  NOTICE  OFFICIAL_BUILDS.md  README.md  ROADMAP.md  ROADMAP_MASTER.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  audit_log.txt  conftest.py  ft4.txt  install.ps1  install.sh  latest.json  package.json  pyproject.toml  (+12 more)
.dev/: remove_legacy_cmds.py
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.navig/: profile.json
config/: config.example.yaml  default_ai_prompt.txt  defaults.yaml  latest.json
deploy/: .env.example  README.md  add-conduit.sh  docker-compose.yml  fix-compose.sh  fix_compose.py  fix_conduit.py  init-db.sql  init-schema.sql  navig-stack.service  navig.service  navig_healthcheck.sh  register-bot.sh
docs/: BRAND_VOICE.md  CLI_STARTUP_PERFORMANCE.md  CLOUD.md  ENHANCED_INSTALLERS_GUIDE.md  FINAL_SUMMARY.md  HANDBOOK.md  HOST_SMOKE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LIGHTHOUSE.md  OFFICIAL_BUILDS.md  QUICK_REFERENCE.md  README.md  REMOTE_DRIVES_GUIDE.md  ROADMAP.md  STABILIZATION_DEBT.md  STATUS.md  TELEGRAM_CHEATSHEET.md  TELEGRAM_MANAGER.md  WORKSPACE_OWNERSHIP.md  architecture.md  bridge-llm-bridge.md  forge-llm-bridge.md  heartbeat.md  mcp-tools.md  upgrade-roadmap.md
examples/: README.md  quickdemo.sh  run-complex-commands.sh
formations/: README.md
host/: README.md  build_errors.txt  cookies.txt  go.mod  go.sum  hobius_test.json  run_hobius.py  run_task.go
host/_rust_legacy/: .gitignore  Cargo.toml  LEGACY_NOTICE.md  README.md
host/_rust_legacy/.cargo/: config.toml
host/_rust_legacy/.github/workflows/: ci.yml
host/_rust_legacy/config/: default.toml  dev.toml
host/_rust_legacy/crates/core_api/: Cargo.toml
host/_rust_legacy/crates/core_api/src/: error.rs  lib.rs  middleware.rs  server.rs  state.rs
host/_rust_legacy/crates/core_api/src/routes/: health.rs  inbox.rs  mod.rs  router.rs  status.rs  tools.rs
host/_rust_legacy/crates/core_auth/: Cargo.toml
host/_rust_legacy/crates/core_auth/src/: lib.rs  scope.rs  store.rs  token.rs
host/_rust_legacy/crates/core_config/: Cargo.toml
host/_rust_legacy/crates/core_config/src/: cli.rs  lib.rs  loader.rs  logging.rs
host/_rust_legacy/crates/core_events/: Cargo.toml
host/_rust_legacy/crates/core_events/src/: bus.rs  event.rs  lib.rs
host/_rust_legacy/crates/core_host/: Cargo.toml
host/_rust_legacy/crates/core_host/src/: main.rs
host/_rust_legacy/crates/core_os/: Cargo.toml
host/_rust_legacy/crates/core_os/src/: autostart.rs  keychain.rs  lib.rs  paths.rs
host/_rust_legacy/crates/core_plugins/: Cargo.toml
host/_rust_legacy/crates/core_plugins/src/: jsonrpc.rs  lib.rs  plugin.rs  registry.rs
host/_rust_legacy/crates/core_tray/: Cargo.toml
host/_rust_legacy/crates/core_tray/src/: lib.rs  tray.rs
host/crates/navig_nlp/: Cargo.toml
host/crates/navig_nlp/src/: lib.rs
navig/: __init__.py  __main__.py  _daemon_defaults.py  _llm_defaults.py  agent_config_loader.py  ai.py  ai_context.py  assistant_hooks.py  assistant_utils.py  boot_messages.py  cache_store.py  cli.py  config.py  connection_pool.py  console_helper.py  cost_tracker.py  debug_logger.py  deprecation.py  discovery.py  env_validator.py  event_bridge.py  file_history.py  gateway_client.py  help_texts.py  ipc_pipe.py  lazy_loader.py  llm_generate.py  llm_router.py  llm_routing_types.py  local_operations.py  main.py  mcp_manager.py  mcp_server.py  migration.py  operation_recorder.py  output_styles.py  proactive_assistant.py  prompt_loader.py  prompt_registry.py  remote.py  (+14 more)
packs/: README.md  backup-essential.yml
scripts/: Install-NerdFont.ps1  _version_sync.py  audit_help_commands.py  bootstrap_navig_linux.sh  bridge-tunnel.service  build.py  convert_ppk_to_openssh.ps1  fix-navig-permissions.ps1  fix_windows_network_sharing.ps1  generate_manifest.py  generate_report.py  github-bootstrap.sh  install_matrix_synapse_windows.cmd  install_matrix_synapse_windows.ps1  install_navig_factory_server.sh  install_navig_linux.sh  install_navig_linux_enhanced.sh  install_navig_macos.sh  install_navig_windows.ps1  install_navig_windows_enhanced.ps1  install_vps_synapse_bridges.sh  migrate_navig_config.py  mount_remote_drives.ps1  navig-colors.psm1  navig-icons.psm1  navig-statusbar.psm1  navig-tunnel.service  navig-tunnel.sh  navig_quick_setup.ps1  navig_quick_setup.sh  navig_ubuntu_backup_uninstall.sh  navig_ubuntu_reinstall.sh  navig_windows_remote_deploy.ps1  precommit_navig_security.sh  release.sh  seed_demo.py  sync-instructions.ps1  test-clean-install.ps1  tool.schema.json  verify_inbox_e2e.py  (+1 more)
sdk/: README.md
skills/: README.md  ahk.json
templates/: README.md  skills_prompt.txt
tests/: conftest.py  install.Tests.ps1  install.bats  test_adapters_os_factory.py  test_agent.py  test_agent_config.py  test_agent_continuation_cli.py  test_agent_localization.py  test_agent_modules.py  test_agent_pattern_analyzer.py  test_agent_proactive_providers.py  test_agent_session_store.py  test_agent_skill_drafter.py  test_agent_status_speculative.py  test_agent_tool_caps.py  test_agent_tool_dispatch.py  test_ahk_adapter.py  test_ahk_ai_stats.py  test_ahk_evolver.py  test_ai_client.py  test_ai_commands.py  test_ai_unicode.py  test_all_modules.py  test_api_schema_adapter.py  test_api_snapshot.py  test_approval.py  test_approval_gate.py  test_assistant_hooks.py  test_async_utils_boot_static_orchestrator.py  test_async_utils_boot_watch_system_static.py  test_audio_handler.py  test_audio_menu_config.py  test_auth_profiles.py  test_auto_evolve.py  test_autoheal.py  test_autonomous_agent.py  test_background_tasks.py  test_backward_compat.py  test_batch95_pure_utils.py  (+375 more)
(+2806 files in other folders)
