[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "navig"
version = "2.4.21"
description = "Terminal-first infrastructure CLI with multi-host SSH management, encrypted vault, AI operator layer, and memory"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "NAVIG Development Team", email = "opensource@navig.run" }
]
keywords = ["cli", "devops", "ssh", "infrastructure", "automation", "mcp", "agent", "vault", "multi-host", "operator"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

dependencies = [
  "typer>=0.14.0",
  "rich>=13.7.0",
  "pyyaml>=6.0",
  "requests>=2.32.3",
  "aiohttp>=3.9.0",
  "paramiko>=3.4.0",
  "colorama>=0.4.6",
  "psutil>=5.9.0",
  "pyperclip>=1.8.2",
  "Jinja2>=3.1.0",
  "websockets>=15.0",
  "cryptography>=42.0.0",
  "argon2-cffi>=21.0.0",
  "packaging>=24.0",
  "platformdirs>=4.0.0",
  "httpx>=0.27.0",
  "loguru>=0.7.0",
  "speedtest-cli>=2.1.3",
  "tomli>=2.0; python_version < '3.11'",
  "pydantic>=2.0.0",
  "json-repair>=0.30.0",
  "readchar>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-benchmark>=4.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "build>=1.2.1",
  # Required by memory/embeddings similarity calculation in tests
  "numpy>=1.24.0",
]
voice = [
  "edge-tts>=6.1.9",
  "openai>=1.0.0",
]
keyring = [
  "keyring>=25.0.0",
]
matrix = [
  "matrix-nio[e2e]>=0.24.0",
]
desktop = [
  "uiautomation>=2.0.18",
  "comtypes>=1.2.0",
]
farmore = [
  "farmore>=0.9.0",
]
interactive = [
  # readchar is now a hard dependency (included in main deps).
  # This extra remains as a convenience alias: pip install navig[interactive]
  # still works and is documented in the installer hints.
  "readchar>=3.0",
]
finance = [
  "beancount>=3.0.0",
]
# telegram extra intentionally empty — NAVIG uses raw Bot API via httpx (no PTB required)
telegram = []
tui = [
  "textual>=0.50.0",
]

[project.urls]
Homepage = "https://navig.run"
Documentation = "https://github.com/navig-run/core/blob/main/docs/README.md"
Repository = "https://github.com/navig-run/core"
Changelog = "https://github.com/navig-run/core/blob/main/CHANGELOG.md"
Security = "https://github.com/navig-run/core/blob/main/SECURITY.md"
"Bug Tracker" = "https://github.com/navig-run/core/issues"

[project.scripts]
navig = "navig.main:main"

[tool.setuptools.packages.find]
where = [".", "sdk/python"]
include = ["navig*"]

[tool.setuptools.package-data]
navig = ["*.txt", "*.md", "help/*.md", "schemas/*.json"]
"navig.resources" = ["workflows/*.yaml", "*.md"]
"navig.agent.context" = ["*.md"]
"navig_sdk" = ["*.md"]
# Root content trees (store/, packages/) are included in sdist via MANIFEST.in.
# They are not Python packages so cannot be listed as package-data keys.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "SIM"]
ignore = [
  "E501",    # line too long (handled by formatter)
  "E402",    # module level import not at top (intentional lazy loading pattern)
  "E712",    # comparison to True/False (accepted pattern in this codebase)
  "E731",    # lambda assignment (used for simple functional helpers)
  "E741",    # ambiguous variable name
  "F401",    # unused import (many are intentional re-exports in __init__.py)
  "F821",    # undefined name (false positives from lazy_loader / TYPE_CHECKING pattern)
  "F841",    # local variable assigned but never used
  "F541",    # f-string without placeholders
  "B007",    # loop variable not used in loop body
  "B008",    # function call in default argument (required for typer.Option/Argument)
  "B905",    # zip without strict= (style preference)
  "B027",    # empty method in ABC without abstractmethod (intentional stub pattern)
  "B028",    # no explicit stacklevel in warnings.warn (gradual addition)
  "UP006",   # use lowercase type annotations (gradual migration)
  "UP007",   # use X | Y union syntax (gradual migration)
  "UP015",   # unnecessary open mode parameters
  "UP022",   # replace stdout captures (gradual migration)
  "UP028",   # use yield from (gradual migration)
  "UP035",   # deprecated typing imports (gradual migration)
  "UP037",   # quoted annotations (gradual migration)
  "UP045",   # use X | None instead of Optional[X] (gradual migration)
  # Security rules that are appropriate / unavoidable in a CLI subprocess tool
  "S103",    # os.chmod permissive mask — intentional for CLI-managed files
  "S104",    # binding to all interfaces — intentional for local daemon/server
  "S105",    # possible hardcoded password — variable names like 'password', not real secrets
  "S107",    # password in function default — variable naming, not real secret
  "S110",    # try-except-pass — common defensive pattern in CLI error handling
  "S112",    # try-except-continue — common defensive pattern
  "S113",    # request without timeout — handled at caller level
  "S202",    # tarfile.extractall — intentional, paths are user-provided
  "S301",    # pickle — intentional use for internal cache/state serialization
  "S311",    # standard pseudo-random — not used for cryptographic purposes here
  "S308",    # mark_safe equivalent — not applicable
  "S324",    # md5/sha1 — used for checksums/cache keys, not cryptographic security
  "S606",    # starting process without shell — more secure than shell=True
  "S608",    # possible SQL injection — queries are internal/parameterised in context
  "S108",    # hardcoded temp file path — CLI tools legitimately use /tmp
  "S310",    # URL open for audit — used for legitimate HTTP calls
  "S603",    # subprocess without shell=True — CLI tools necessarily use subprocess
  "S607",    # partial executable path — standard for CLI tools invoking system binaries
  "S701",    # jinja2 autoescape — templates used for local rendering only
  # C4 comprehension suggestions (style preferences, not correctness)
  "C401",    # unnecessary generator (set comprehension) — explicit loop preferred
  "C408",    # unnecessary dict() constructor — explicit form aids readability
  "C414",    # unnecessary double cast (list/set/tuple)
  "C416",    # unnecessary list comprehension — explicit form aids readability
  # SIM rules requiring large-scale refactors (pure style preferences, not correctness)
  "SIM102",  # nested if → use single if with and
  "SIM103",  # return condition directly
  "SIM105",  # try-except-pass → contextlib.suppress
  "SIM108",  # if-else → ternary expression
  "SIM109",  # use `in` for multiple comparisons
  "SIM110",  # use any()/all() instead of loop
  "SIM112",  # use capitalized environment variable names
  "SIM115",  # use context manager for open()
  "SIM116",  # use dict instead of consecutive if statements
  "SIM117",  # nested with → merge into single with
  "SIM118",  # use `key in dict` instead of `key in dict.keys()`
  "SIM201",  # use != instead of not ==
  "SIM211",  # use bool() instead of if/else returning True/False
  "SIM212",  # avoid negated conditions in ternary
  "SIM222",  # use `or` instead of if/else
  "SIM300",  # yoda condition
  "SIM905",  # split string to list (style preference)
  "SIM910",  # use dict.get() instead of dict[key] in if/else
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # assert statements are idiomatic and required in pytest tests
  "S105",    # hardcoded password strings are expected in test fixtures
  "S106",    # hardcoded password in function arguments (test helpers)
  "S107",    # hardcoded password as default value (test helpers)
  "S311",    # pseudo-random use is fine in test data generation
  "B011",    # assert False is acceptable in pytest (pytest.fail alternative)
  "B017",    # assertRaises(Exception) acceptable in broad-catch test scenarios
]
"tests/*.py" = [
  "S101",
  "S105",
  "S106",
  "S107",
  "S311",
  "B011",
  "B017",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
