[package]
name = "navig_nlp"
version = "0.1.0"
edition = "2021"
description = "Native NLP acceleration for NAVIG — tokenization, TF scoring, signal detection"

[lib]
name = "navig_nlp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
regex = "1.10"
ahash = "0.8"
rayon = "1.9"
once_cell = "1.19"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
