[package]
name    = "core_config"
version = "0.1.0"
edition = "2021"
description = "Layered configuration + logging init for NAVIG Core Host"

[dependencies]
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
config           = { workspace = true }
clap             = { workspace = true }
toml             = { workspace = true }
once_cell        = { workspace = true }
dirs             = { workspace = true }

[features]
default = []
