[package]
name    = "core_host"
version = "0.1.0"
edition = "2021"
description = "NAVIG Core Host — entry point binary"

[[bin]]
name = "navig-core-host"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
eyre       = { workspace = true }
once_cell  = { workspace = true }

core_config  = { path = "../core_config" }
core_events  = { path = "../core_events" }
core_auth    = { path = "../core_auth" }
core_api     = { path = "../core_api" }
core_plugins = { path = "../core_plugins" }
core_tray    = { path = "../core_tray" }
core_os      = { path = "../core_os" }

[target.'cfg(unix)'.dependencies]
signal-hook       = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[target.'cfg(windows)'.dependencies]
# Windows: graceful shutdown via ctrl-c (tokio handles this natively)

[features]
default         = ["tray"]
tray            = ["core_tray/tray"]
debug-endpoints = ["core_api/debug-endpoints"]
headless        = []
