[package]
name    = "core_tray"
version = "0.1.0"
edition = "2021"
description = "System tray icon + menu for NAVIG Core Host (Windows / macOS)"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
thiserror  = "1.0"
tracing    = "0.1"

core_config = { path = "../core_config" }
core_events = { path = "../core_events" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21"
muda      = "0.17"
image     = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
# tray-icon requires gtk3 on Linux; add gtk feature or skip
# Kept empty for headless Linux builds

[features]
default = ["tray"]
tray    = []
